<resources>
    <string name="app_name">MLight</string>
    <string name="action_settings">System Settings</string>
    <string name="error_info">Message from Mars</string>
    <string name="default_text">Little Prince</string>
    <string name="default_tobecontinued">mlight to be continued... Thank you</string>
    <string name="splash_words">Really know you, Enjoy the new life.</string>
    <string name="app_crash_tip">I am sorry.</string>
    <string name="activity_back">Back</string>
    <string-array name="activity_titles_main">
        <item>Home</item>
        <item>Scene</item>
        <item>Profile</item>
    </string-array>
    <string-array name="fragment_alias_main">
        <item>Device</item>
        <item>Scene</item>
        <item>Profile</item>
    </string-array>
    <string name="fragment_off_tip_home">Turn on</string>
    <string name="fragment_delay_off_home">Delay off</string>
    <string name="activity_dialog_title_main">Search device</string>
    <string name="activity_dialog_content_main">Just a moment, scanning...</string>
    <string name="activity_start_connect_main">Connecting...</string>
    <string name="activity_no_device_main">Device not found.</string>
    <string name="activity_bluetooth_tip_splash">Your phone does not support the BLE.</string>
    <string name="fragment_denied_tip_splash">Open the Bluetooth to use all the features.</string>
    <string name="fragment_skip_splash">Skip %d</string>
    <string name="fragment_username_hint_login">+86</string>
    <string name="fragment_password_hint_login">Password</string>
    <string name="fragment_login_login">Log In</string>
    <string name="fragment_register_login">Sign Up</string>
    <string name="fragment_forget_login">Forgot Password</string>
    <string name="fragment_phone_hint_login">Mobile number</string>
    <string name="fragment_captcha_hint_login">Verification Code</string>
    <string name="fragment_captcha_login">Verification</string>
    <string name="fragment_captcha_retry_login"> s</string>
    <string name="fragment_reset_password_login">Confirm</string>
    <string name="fragment_agreement_login">I have read and agree to the terms of service.</string>
    <string name="fragment_reset_succeed_login">Reset password successfully.</string>
    <string name="fragment_register_succeed_login">Register successfully.</string>
    <string name="fragment_login_succeed_login">Login successfully.</string>
    <string name="fragment_invalid_phone_login">Invalid account.</string>
    <string name="fragment_invalid_captcha_login">Invalid verification code.</string>
    <string name="fragment_invalid_password_login">Invalid password.</string>
    <string name="fragment_me_setting">Me</string>
    <string name="fragment_head_me">Photo</string>
    <string name="fragment_nickname_me">Nickname</string>
    <string name="fragment_phone_number_me">Phone</string>
    <string name="fragment_change_password_me">Modify password</string>
    <string name="fragment_log_out_me">Log Out</string>
    <string name="activity_title_scan">Search Device</string>
    <string name="activity_scan_scan">Scan</string>
    <string name="activity_scanning_scan">Scanning...</string>
    <string name="activity_white_pallet">White</string>
    <string name="activity_colorful_pallet">Colorful</string>
    <string name="activity_dark_pallet">Dark</string>
    <string name="activity_light_pallet">Bright</string>
    <string name="background_app">Background</string>
    <string name="timeearly_thannow_warning">Please select a correct time after this moment!</string>
    <string name="tv_save">save</string>
    <string name="save_succ">save successful</string>
    <string name="choose_call_reminder">Select a call reminder mode</string>
    <string name="choose_call_reminder_red">Red</string>
    <string name="choose_call_reminder_green">Green</string>
    <string name="choose_call_reminder_blue">Blue</string>
    <string name="choose_call_reminder_diy">Diy mode</string>
    <string name="unfinised_open_light_timer">open light timer is still running</string>
    <string name="finised_open_light_timer">open light timer has been finished</string>
    <string name="unfinised_close_light_timer">close light timer is still running</string>
    <string name="finised_close_light_timer">close light timer has been finished</string>
    <string name="fragment_delay_tip_home">Turn off the lights %s minutes later.</string>
    <string name="fragment_delay_cancel_home">Canceled</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="scene_color_pallet">Pallet</string>
    <string name="scene_colorful_gradient">Gradient</string>
    <string name="scene_warm_light">Night</string>
    <string name="scene_set_password">Password</string>
    <string name="scene_change_name">Rename</string>
    <string name="scene_preset_color">Preset</string>
    <string name="scene_music_rythm">Music</string>
    <string name="scene_shake_shake">Shake</string>
    <string name="scene_temperature">Temperature</string>
    <string name="scene_selfie">Selfie</string>
    <string name="fragment_night_tip_scene">Night light is on.</string>
    <string name="fragment_gradient_open_scene">Gradient mode is on.</string>
    <string name="fragment_gradient_close_scene">Gradient mode is off.</string>
    <string name="colorpallet">Color Palette</string>
    <string name="colorpallet_description">Customize the color using a palette</string>
    <string name="warmnight">Warm Night</string>
    <string name="warmnight_description">A warm light to make you sleep well</string>
    <string name="sunmode">Sun Mode</string>
    <string name="sunmode_description">Show sunrise and sunset color</string>
    <string name="defaultmode">Default Mode</string>
    <string name="defaultmode_description">Show a series of color gradients</string>
    <string name="rgbwave">RGB Wave</string>
    <string name="rgbwave_description">Cycle through red, green and blue like breathing</string>
    <string name="diyshine">Diy Shine</string>
    <string name="diyshine_description">Design your own series of gradients</string>
    <string name="open_light_timer">Turn On At</string>
    <string name="close_light_timer">Turn Off After</string>
    <string name="cancel_open_light_timer">Cancel turn on at </string>
    <string name="light_timer_unit">Min</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="cyan">cyan</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="white">white</string>
    <string name="input_new_pwd">Please input new password!</string>
    <string name="input_new_lightname">Please input light new name!</string>
    <string name="group_device_detele">Delete</string>
    <string name="group_empty_info">Pull to Scanning</string>
    <string name="group_empty_on">Back to Stop</string>
    <string name="connect_device_title">My Device</string>
    <string name="connect_group_title">My Group</string>
    <string name="connect_personal_title">Personal Center</string>
    <string name="connect_select_tip">Please select the device</string>
    <string name="connect_dialog_title">Connect</string>
    <string name="connect_dialog_message">Connecting……</string>
    <string name="connect_toast_failed">Connect Failed</string>
    <string name="gradient_title">Gradient Ramp</string>
    <string name="stop_gap">Change Delay </string>
    <string name="gradient_gap">Color Gap </string>
    <string name="red_value">Red Value </string>
    <string name="green_value">Green Value </string>
    <string name="blue_value">Blue Value </string>
    <string name="color_selected">√ </string>
    <string name="color_notselected">X </string>
    <string name="change_gradient_delay">Change Gradient Delay(unit: second)</string>
    <string name="confirm_delay">Confirm </string>
    <string name="cancel_delay">Cancel </string>
    <string name="settings_delay_tip">Please input correct delay value! </string>
    <string name="wait_gradient_run">Please wait the gradient mission run! </string>
    <string name="gradient_model_saved">Gradient model to be continued... </string>
    <string name="hint_input_new">Please input delay value.(unit: second)</string>
    <string name="hint_value_saved">Current saved delay value: </string>
    <string name="drive_title">Contextual Mode</string>
    <string name="btn_on">ON</string>
    <string name="btn_off">OFF</string>
    <string name="frequency_strong">0 Fast</string>
    <string name="frequency_weak">Slow 512</string>
    <string name="frequency_gap">Frequency Gap </string>
    <string name="red_warning">Red Warning</string>
    <string name="green_clear">Green Light</string>
    <string name="blue_caution">Blue Caution</string>
    <string name="red_green">Red and Green</string>
    <string name="red_blue">Red and Blue</string>
    <string name="blue_green">Blue and Green</string>
    <string name="red_blue_green">Red, Blue and Green</string>
    <string name="label">MARK</string>
    <string name="label_unlabeled">UNMARK</string>
    <string name="notification_content_drivemode">Drive Mode</string>
    <string name="notification_content_GradientRamp">Gradient Ramp</string>
    <string name="notification_content_GradientRamp_Sun">Sun Mode</string>
    <string name="notification_content_GradientRamp_Rgb">RGB Wave</string>
    <string name="center_phone_func">Telephony</string>
    <string name="center_problem">QA</string>
    <string name="center_feedback">Feedback</string>
    <string name="center_about_app">Application</string>
    <string name="center_about_us">About</string>
    <string name="center_share">Share</string>
    <string name="center_share_title">Share to your friends</string>
    <string name="center_share_text">原来魔小灯（http://a.app.qq.com/o/simple.jsp?pkgname=com.guohua.mlight）这么好玩，你也来试试！</string>
    <string name="personal_selfie">Selfie</string>
    <string name="connect_null_title">What is the name of your device?</string>
    <string name="connect_null_info">Please click + select your device.</string>
    <string name="dialog_title_connect">Disconnected from Magic Lamp</string>
    <string name="dialog_info_connect">You can reconnect or exit the program, please select.</string>
    <string name="dialog_exit_connect">Exit</string>
    <string name="dialog_retry_connect">Retry</string>
    <string name="main_brightness_weak">0 Dark</string>
    <string name="main_brightness_strong">255 Bright</string>
    <string name="main_brightness_tip">Current level </string>
    <string name="main_timer_weak">0 Minutes</string>
    <string name="main_timer_strong">60 Minutes</string>
    <string name="main_timer_tip_zero">Delay function closed.</string>
    <string name="scene_mode">Scene Mode </string>
    <string name="settings_music">Music</string>
    <string name="shake_switch">Lamp Switch</string>
    <string name="shake_color">Random Color</string>
    <string name="shake_strong">Strong</string>
    <string name="shake_weak">Weak</string>
    <string name="shake_sensitive">Sensitive</string>
    <string name="visualizer_strong">Strong</string>
    <string name="visualizer_weak">Weak</string>
    <string name="visualizer_feel">Feeling</string>
    <string name="fragment_tip_password">All device password will be reset （Default 0000）</string>
    <string name="fragment_hint_password">Enter new password（Four-digit number）</string>
    <string name="fragment_set_password">Confirm</string>
    <string name="fragment_tip_rename">All devices will be rename</string>
    <string name="fragment_hint_rename">Enter a name</string>
    <string name="fragment_change_rename">Rename</string>
</resources>