<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/assistant"
    android:orientation="vertical"
    tools:context="com.guohua.mlight.view.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/horizontal_padding">

        <EditText
            android:id="@+id/et_phone_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:hint="@string/fragment_phone_hint_login"
            android:inputType="phone"
            android:padding="@dimen/content_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_body" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_margin"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@color/white"
            android:hint="@string/fragment_password_hint_login"
            android:inputType="textPassword"
            android:padding="@dimen/content_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_body" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding">

            <TextView
                android:id="@+id/tv_forget_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/fragment_forget_login"
                android:textColor="@color/font_color"
                android:textSize="@dimen/text_size_body" />

            <TextView
                android:id="@+id/tv_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/fragment_register_login"
                android:textColor="@color/font_color"
                android:textSize="@dimen/text_size_body" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/selector_rectangle_fill"
            android:text="@string/fragment_login_login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_agreement_login"
            android:textColor="@color/font_color"
            android:textSize="@dimen/text_size_caption" />
    </LinearLayout>
</LinearLayout>
