<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_padding">

    <TextView
        android:id="@+id/tv_tip_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:text="@string/fragment_tip_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_caption" />

    <EditText
        android:id="@+id/et_password_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginBottom="@dimen/content_padding"
        android:layout_marginTop="@dimen/content_padding"
        android:background="@color/white"
        android:hint="@string/fragment_hint_password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:padding="@dimen/content_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body" />

    <TextView
        android:id="@+id/tv_set_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_round_rectangle"
        android:gravity="center"
        android:text="@string/fragment_set_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body" />

</LinearLayout>