<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/assistant"
    android:orientation="vertical"
    tools:context=".view.activity.ShakeActivity">

    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_shake_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="100dp"
            android:src="@drawable/icon_shake_a_shake" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_switch_shake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/greya"
            android:gravity="center"
            android:paddingBottom="@dimen/vertical_padding"
            android:paddingTop="@dimen/vertical_padding"
            android:text="@string/shake_switch"
            android:textColor="@color/main" />

        <TextView
            android:id="@+id/tv_color_shake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingBottom="@dimen/vertical_padding"
            android:paddingTop="@dimen/vertical_padding"
            android:text="@string/shake_color"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/vertical_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/shake_strong"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_caption" />

            <TextView
                android:id="@+id/tv_current_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shake_sensitive"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_body" />

            <TextView
                android:id="@+id/tv_show_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/shake_weak"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_caption" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/sb_threshold_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="512" />

        <Switch
            android:id="@+id/s_background_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/background_app"
            android:textSize="@dimen/text_size_body" />
    </LinearLayout>
</LinearLayout>
